syntax = "proto3";

option go_package = "github.com/fathurzoy/go-grpc-ecommerce-be/pb/newsletter";

import "common/base_response.proto";
import "buf/validate/validate.proto";

package newsletter;

service NewsletterService {
  rpc SubscribeNewsletter(SubscribeNewsletterRequest) returns (SubscribeNewsletterResponse);
}

message SubscribeNewsletterRequest {
  string email = 1 [(buf.validate.field).string = { email: true , min_len: 1 , max_len: 255}];
  string full_name = 2 [(buf.validate.field).string = { min_len: 1 , max_len: 255}];
}

message SubscribeNewsletterResponse {
  common.BaseResponse base = 1;
}